--- a/public/placement/index.html
+++ b/public/placement/index.html
@@ -6,12 +6,13 @@
   <title>SayBon Placement Test</title>
 
   <link rel="stylesheet" href="placement.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <!-- TEST -->
-  <div id="testScreen" class="placement-wrapper">
+  <div class="placement-wrapper" id="testArea">
 
     <h2 id="questionPrompt"></h2>
 
@@ -21,22 +22,25 @@
 
   </div>
 
-  <!-- INTERVENTION OVERLAY -->
+  <!-- INTERVENTION -->
   <div id="intervention" class="intervention hidden">
 
-    <div id="teacherGlass" class="teacher-glass">
-      <div class="halo shimmer"></div>
+    <div class="teacher-glass">
+
+      <div class="halo"></div>
+
       <img src="/assets/images/teacher.png" />
+
+      <audio id="interventionAudio">
+        <source src="/assets/sounds/placement/intervention.mp3" type="audio/mpeg">
+      </audio>
+
     </div>
 
-    <div id="interventionActions" class="intervention-actions">
-      <button id="revealBtn">Go to level reveal →</button>
+    <div class="intervention-actions">
       <button id="continueBtn">Continue test</button>
+      <button id="revealBtn">Go to level reveal →</button>
     </div>
-
-    <audio id="interventionAudio">
-      <source src="/assets/sounds/placement/intervention.mp3" type="audio/mpeg" />
-    </audio>
 
   </div>
 
