--- a/public/placement/index.html
+++ b/public/placement/index.html
@@ -1,39 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>SayBon Placement</title>
-  <link rel="stylesheet" href="placement.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>SayBon Placement Test</title>
+
+  <!-- Placement styles -->
+  <link rel="stylesheet" href="placement.css" />
 </head>
 
 <body>
 
-<div class="test-container">
-  <h2 id="prompt"></h2>
+  <!-- =========================
+       MAIN PLACEMENT APP
+  ========================== -->
+  <main id="app">
 
-  <div id="media"></div>
+    <h2 id="questionPrompt"></h2>
 
-  <div id="options"></div>
-</div>
+    <!-- audio / image goes here -->
+    <div id="mediaArea"></div>
 
-<!-- INTERVENTION -->
-<div id="intervention" class="intervention hidden">
+    <!-- answer buttons -->
+    <div id="options"></div>
 
-  <div id="teacherCircle" class="teacher-circle">
-    <div class="halo"></div>
-    <img src="/assets/images/teacher.png">
-    <audio id="interventionAudio" preload="auto">
-      <source src="/assets/sounds/placement/intervention.mp3">
-    </audio>
+  </main>
+
+
+  <!-- =========================
+       INTERVENTION OVERLAY
+  ========================== -->
+  <div id="intervention" class="hidden">
+
+    <!-- teacher only while audio plays -->
+    <div class="teacher-box">
+      <div class="teacher-circle">
+        <img
+          src="/assets/images/teacher.png"
+          alt="Teacher"
+        />
+      </div>
+    </div>
+
+    <!-- autoplay intervention audio -->
+    <audio
+      id="interventionAudio"
+      src="/assets/sounds/placement/intervention.mp3"
+      preload="auto"
+    ></audio>
+
+    <!-- buttons appear AFTER audio -->
+    <div class="intervention-actions">
+
+      <button id="continueBtn" class="glass-btn back">
+        Back to test
+      </button>
+
+      <button id="revealBtn" class="glass-btn reveal">
+        Reveal level
+      </button>
+
+    </div>
+
   </div>
 
-  <div id="interventionButtons" class="intervention-buttons hidden">
-    <button id="backBtn">Back to test</button>
-    <button id="revealBtn">Reveal level</button>
-  </div>
 
-</div>
+  <!-- =========================
+       SCRIPT — MUST BE LAST
+  ========================== -->
+  <script src="./placement.js"></script>
 
-<script src="placement.js"></script>
 </body>
 </html>
