Update placement intervention animations and reveal flow

--- a/public/reveal/index.html
+++ b/public/reveal/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 
-<div class="reveal">
-  <h1 id="levelText"></h1>
+<div class="level-container">
+  <div class="level-text" id="levelText"></div>
 
-  <div class="actions hidden">
-    <button onclick="goLogin()">Start journey</button>
-    <button onclick="goHome()">Back to homepage</button>
+  <div class="reveal-buttons">
+    <button id="startJourney">Start journey</button>
+    <button id="goHome">Back to homepage</button>
   </div>
 </div>
 
