Improve reveal page animation and premium button design

--- a/public/reveal/index.html
+++ b/public/reveal/index.html
@@ -6,13 +6,17 @@
 </head>
 <body>
 
-<div class="level-container">
-  <div class="level-text" id="levelText"></div>
 
-  <div class="reveal-buttons">
-    <button id="startJourney">Start journey</button>
-    <button id="goHome">Back to homepage</button>
-  </div>
+
+<div class="reveal-actions hidden">
+  <button class="reveal-btn primary" id="startJourney">
+    Start journey
+  </button>
+
+  <button class="reveal-btn secondary" id="backHome">
+    Back to homepage
+  </button>
+</div>
 </div>
 
 <script src="reveal.js"></script>
