Fix reveal buttons, navigation flow, and animations

--- a/public/reveal/index.html
+++ b/public/reveal/index.html
@@ -7,18 +7,17 @@
 <body>
 
 
-
 <div class="reveal-actions hidden">
-  <button class="reveal-btn primary" id="startJourney">
+  <button id="startJourney" class="btn primary">
     Start journey
   </button>
 
-  <button class="reveal-btn secondary" id="backHome">
+  <button id="backHome" class="btn secondary">
     Back to homepage
   </button>
 </div>
-</div>
 
 <script src="reveal.js"></script>
+
 </body>
 </html>
