Fix reveal page routing and login path

--- a/public/reveal/index.html
+++ b/public/reveal/index.html
@@ -2,22 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Level — SayBon</title>
+  <title>Your Level</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="stylesheet" href="reveal.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700;800;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <div class="reveal-container">
 
-    <h1 id="levelText" class="level-text">
-      Loading...
-    </h1>
+    <div id="levelText" class="level-text">
+      Loading…
+    </div>
 
-    <div class="reveal-actions">
+    <div id="buttons" class="reveal-buttons">
       <button id="startJourney" class="btn primary">
         Start journey
       </button>
@@ -32,3 +31,6 @@
   <script src="reveal.js"></script>
 </body>
 </html>
+
+
+
