--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -5,21 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login — SayBon</title>
 
-  <link rel="stylesheet" href="../css/login.css" />
+  <link rel="stylesheet" href="/css/global.css" />
+  <link rel="stylesheet" href="/css/login.css" />
 </head>
-
 <body>
 
   <div class="login-page">
-    <h1>Welcome back ✨</h1>
-    <p>Log in to continue your French journey.</p>
+    <h1>Welcome back</h1>
+    <p>Log in to continue your French journey</p>
 
     <button id="loginBtn" class="google-btn">
       Continue with Google
     </button>
   </div>
 
-  <script type="module" src="login.js"></script>
+  <script type="module" src="/auth/login.js"></script>
 
 </body>
 </html>
