--- a/public/chat/index.html
+++ b/public/chat/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Loading — SayBon</title>
+  <title>Chat — SayBon</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <link rel="stylesheet" href="/css/global.css" />
-  <link rel="stylesheet" href="/loader/loader.css" />
 </head>
 <body>
 
-  <div class="loader-screen">
-    <div class="spinner"></div>
-    <p id="loaderTag"></p>
+  <div class="card">
+    <h2>SayBon Chat Room</h2>
+    <p>Coming soon… 💬</p>
+
+    <button class="secondary" onclick="location.href='/dashboard/'">
+      Back to Dashboard
+    </button>
   </div>
 
-  <script src="/loader/loader.js"></script>
 </body>
 </html>
