--- a/public/reveal/index.html
+++ b/public/reveal/index.html
@@ -4,33 +4,19 @@
   <meta charset="UTF-8" />
   <title>Your Level</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <link rel="stylesheet" href="reveal.css" />
 </head>
-
 <body>
 
-  <div class="reveal-container">
+<div class="reveal-container">
+  <div id="levelText" class="level-text">Loading…</div>
 
-    <div id="levelText" class="level-text">
-      Loading…
-    </div>
-
-    <div id="buttons" class="reveal-buttons">
-      <button id="startJourney" class="btn primary">
-        Start journey
-      </button>
-
-      <button id="backHome" class="btn secondary">
-        Back to homepage
-      </button>
-    </div>
-
+  <div id="buttons" class="reveal-buttons">
+    <button id="startJourney" class="btn primary">Start journey</button>
+    <button id="backHome" class="btn secondary">Back to homepage</button>
   </div>
+</div>
 
-  <script src="reveal.js"></script>
+<script src="reveal.js"></script>
 </body>
 </html>
-
-
-
