--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -5,21 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login — SayBon</title>
 
-  <link rel="stylesheet" href="/css/global.css" />
-  <link rel="stylesheet" href="/css/login.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../css/global.css" />
+  <link rel="stylesheet" href="../css/login.css" />
 </head>
 <body>
 
-  <div class="login-page">
-    <h1>Welcome back</h1>
-    <p>Log in to continue your French journey</p>
+<div class="login-app">
+
+  <div class="login-card">
+
+    <div class="floating-emoji">✨</div>
+
+    <h1 class="login-title">Bienvenue back</h1>
+    <p class="login-sub">
+      Sign in to continue your French journey.
+    </p>
+
+    <div class="quote">
+      “Every new language is a new life.” — <span>Une nouvelle vie</span>
+    </div>
 
     <button id="loginBtn" class="google-btn">
+      <span class="g">G</span>
       Continue with Google
     </button>
+
+    <p class="tiny">
+      By continuing, you agree to SayBon’s Terms & Privacy.
+    </p>
+
   </div>
 
-  <script type="module" src="/auth/login.js"></script>
+</div>
 
+<script type="module" src="login.js"></script>
 </body>
 </html>
