--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -3,53 +3,87 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LEARNER 📌 DASHBOARD</title>
+  <title>LEARNER 📌 DASHBOARD — SayBon</title>
 
-  <link rel="stylesheet" href="/css/global.css" />
-  <link rel="stylesheet" href="/dashboard/dashboard.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../css/global.css" />
+  <link rel="stylesheet" href="../css/dashboard.css" />
 </head>
 <body>
 
+<div class="dashboard-app">
+
   <header class="dash-header">
-    <h1>LEARNER 📌 DASHBOARD</h1>
+    <h1 class="dash-title">LEARNER 📌 DASHBOARD</h1>
+    <p class="dash-sub">Your French journey at a glance</p>
   </header>
 
   <main class="dash-grid">
 
-    <button class="dash-tile" onclick="goLevels()">
-      🌍 Levels
+    <!-- LEVELS (only one that opens real route) -->
+    <button class="tile tile-levels" onclick="goLevels()">
+      <div class="tile-icon">🎯</div>
+      <div class="tile-title">Levels</div>
+      <div class="tile-sub">A0 → C1</div>
     </button>
 
-    <button class="dash-tile" onclick="goTalkletics()">
-      🎮 Talkletics Games
+    <!-- TALKLETICS GAMES -->
+    <button class="tile tile-games" onclick="goTalkletics()">
+      <div class="tile-icon">🎮</div>
+      <div class="tile-title">Talkletics Games</div>
+      <div class="tile-sub">20 skill games</div>
     </button>
 
-    <button class="dash-tile" onclick="goMusic()">
-      🎵 SayBon Music
+    <!-- SAYBON MUSIC -->
+    <button class="tile tile-music" onclick="goMusic()">
+      <div class="tile-icon">🎵</div>
+      <div class="tile-title">SayBon Music</div>
+      <div class="tile-sub">8 playlists</div>
     </button>
 
-    <button class="dash-tile" onclick="goDelf()">
-      🎓 DELF Exam Prep
+    <!-- DELF EXAMS -->
+    <button class="tile tile-delf" onclick="goDelf()">
+      <div class="tile-icon">📝</div>
+      <div class="tile-title">DELF Prep</div>
+      <div class="tile-sub">Mock exams</div>
     </button>
 
-    <button class="dash-tile" onclick="goTranslation()">
-      🌐 Professional Translation
+    <!-- TRANSLATION SERVICES -->
+    <button class="tile tile-translate" onclick="goTranslation()">
+      <div class="tile-icon">🌍</div>
+      <div class="tile-title">Translation</div>
+      <div class="tile-sub">Clients & Translators</div>
     </button>
 
-    <button class="dash-tile" onclick="goChat()">
-      💬 Chat Room
+    <!-- CHAT ROOM -->
+    <button class="tile tile-chat" onclick="goChat()">
+      <div class="tile-icon">💬</div>
+      <div class="tile-title">Chat Room</div>
+      <div class="tile-sub">Community space</div>
     </button>
 
-    <button class="dash-tile" onclick="goFeedback()">
-      📝 Feedback & Enquiries
+    <!-- FEEDBACK -->
+    <button class="tile tile-feedback" onclick="goFeedback()">
+      <div class="tile-icon">✍️</div>
+      <div class="tile-title">Feedback & Enquiries</div>
+      <div class="tile-sub">We’re listening</div>
     </button>
 
-    <button class="dash-tile" onclick="goSupport()">
-      Support 💚 SayBon
+    <!-- SUPPORT -->
+    <button class="tile tile-support" onclick="goSupport()">
+      <div class="tile-icon">💚</div>
+      <div class="tile-title">Support SayBon</div>
+      <div class="tile-sub">Invest • Donate • Partner</div>
     </button>
 
   </main>
 
-  <script src="/dashboard/dashboard.js"></script>
+  <footer class="dash-footer">
+    <button class="home-mini" onclick="goHome()">← Back to Home</button>
+  </footer>
+
+</div>
+
+<script src="dashboard.js"></script>
 </body>
 </html>
