--- a/public/index.html
+++ b/public/index.html
@@ -7,34 +7,30 @@
   <title>SayBon — Easy Fun French</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/global.css" />
-  <link rel="stylesheet" href="/css/home.css" />
+  <link rel="stylesheet" href="css/home.css" />
 </head>
 
 <body>
 
   <!-- AUDIO -->
   <audio id="introAudio" preload="auto">
-    <source src="/assets/sounds/intro-v2.mp3" type="audio/mpeg">
+    <source src="assets/sounds/intro-v2.mp3" type="audio/mpeg">
   </audio>
-
-  <!-- ADMIN GEAR (TOP RIGHT) -->
-  <button id="adminGear" class="admin-gear">⚙️</button>
 
   <div class="app">
 
     <!-- LEFT -->
     <section class="white-area">
-      <img src="/assets/images/logo.png" class="logo" />
+      <img src="assets/images/logo.png" class="logo" />
     </section>
 
     <!-- RIGHT -->
     <section class="green-area">
 
-      <!-- TEACHER (TAP TO OPEN OFFER OVERLAY) -->
+      <!-- TEACHER -->
       <div class="teacher-wrap" id="teacherCircle">
         <div class="teacher-ring">
-          <img src="/assets/images/teacher.png" />
+          <img src="assets/images/teacher.png" />
         </div>
         <p class="tap-text">Tap 👆🏽</p>
       </div>
@@ -45,11 +41,14 @@
         <button class="action-btn" id="loginBtn">Log in</button>
       </div>
 
+      <!-- ADMIN SETTINGS BUTTON (NEW) -->
+      <button id="adminBtn" class="settings-btn">⚙️</button>
+
     </section>
 
   </div>
 
-  <!-- WHAT WE OFFER OVERLAY -->
+  <!-- OVERLAY -->
   <div id="offerOverlay" class="overlay hidden">
     <h2>What we offer</h2>
 
@@ -62,7 +61,7 @@
     </div>
   </div>
 
-  <script src="/js/home.js"></script>
+  <script src="js/home.js"></script>
 
 </body>
 </html>
