--- a/public/why.html
+++ b/public/why.html
@@ -3,28 +3,97 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Why Learn French?</title>
+  <title>Why learn French? — SayBon</title>
 
-  <link rel="stylesheet" href="/css/global.css" />
-  <link rel="stylesheet" href="/css/why.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/global.css" />
+  <link rel="stylesheet" href="css/why.css" />
 </head>
+
 <body>
 
-  <main class="center-card">
-    <h2>Why do you want to learn French?</h2>
+<div class="why-app">
 
-    <textarea id="whyInput" placeholder="Tell us your reason..."></textarea>
+  <div class="why-card">
 
-    <button id="continueBtn" class="primary-btn">
-      Continue
+    <div class="badge">🎯 Your motivation</div>
+
+    <h1 class="why-title">
+      Why do you want to learn French?
+    </h1>
+
+    <p class="why-sub">
+      Choose one (or more). Your choice helps us personalize your journey.
+    </p>
+
+    <div class="why-grid">
+
+      <button class="why-option" data-value="travel">
+        🌍 Travel & Culture  
+        <span>Speak confidently abroad</span>
+      </button>
+
+      <button class="why-option" data-value="school">
+        🎓 School or Exams  
+        <span>DELF, grades, or studies</span>
+      </button>
+
+      <button class="why-option" data-value="work">
+        💼 Work & Career  
+        <span>Business, interviews, promotion</span>
+      </button>
+
+      <button class="why-option" data-value="family">
+        ❤️ Family & Friends  
+        <span>Connect with loved ones</span>
+      </button>
+
+      <button class="why-option" data-value="fun">
+        ✨ Just for fun  
+        <span>I love languages!</span>
+      </button>
+
+      <button class="why-option" data-value="other">
+        🤔 Other  
+        <span>I have my own reason</span>
+      </button>
+
+    </div>
+
+    <button class="continue-btn" id="whyContinue">
+      Continue →
     </button>
-  </main>
 
-  <script>
-    document.getElementById("continueBtn").onclick = () => {
-      window.location.href = "/start.html";
-    };
-  </script>
+  </div>
+
+</div>
+
+<script>
+  const options = document.querySelectorAll(".why-option");
+  let selected = null;
+
+  options.forEach(btn => {
+    btn.addEventListener("click", () => {
+      options.forEach(o => o.classList.remove("active"));
+      btn.classList.add("active");
+      selected = btn.dataset.value;
+    });
+  });
+
+  document.getElementById("whyContinue").onclick = () => {
+    if (!selected) {
+      alert("Please select a reason first 😊");
+      return;
+    }
+
+    // Save motivation (for future personalization)
+    sessionStorage.setItem("saybon_why", selected);
+
+    // Send to loader → dashboard
+    sessionStorage.setItem("saybon_next", "/dashboard/");
+    window.location.href = "/loader.html";
+  };
+</script>
 
 </body>
 </html>
