Restore homepage design and move settings button to bottom-right (wired to admin)

--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,16 @@
 
   <div class="app">
 
-    <!-- LEFT -->
+    <!-- LEFT (WHITE) — RESTORED -->
     <section class="white-area">
       <img src="assets/images/logo.png" class="logo" />
     </section>
 
-    <!-- RIGHT -->
+    <!-- RIGHT (GREEN) — RESTORED -->
     <section class="green-area">
+
+      <!-- SETTINGS ICON (MOVED TO BOTTOM RIGHT) -->
+      <button id="settingsBtn" class="settings-btn">⚙️</button>
 
       <!-- TEACHER -->
       <div class="teacher-wrap" id="teacherCircle">
@@ -35,20 +38,17 @@
         <p class="tap-text">Tap 👆🏽</p>
       </div>
 
-      <!-- ACTIONS -->
+      <!-- ACTIONS (UNCHANGED) -->
       <div class="actions">
         <button class="action-btn" id="startBtn">Get started</button>
         <button class="action-btn" id="loginBtn">Log in</button>
       </div>
 
-      <!-- ADMIN SETTINGS BUTTON (NEW) -->
-      <button id="adminBtn" class="settings-btn">⚙️</button>
-
     </section>
 
   </div>
 
-  <!-- OVERLAY -->
+  <!-- OVERLAY (UNCHANGED) -->
   <div id="offerOverlay" class="overlay hidden">
     <h2>What we offer</h2>
 
