Redesign homepage with cinematic stage, teacher interaction, and wired navigation

--- a/public/index.html
+++ b/public/index.html
@@ -4,67 +4,65 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SayBon — Easy. Fun. French.</title>
-
-  <link rel="stylesheet" href="/css/global.css" />
   <link rel="stylesheet" href="/css/home.css" />
-
-  <script defer src="/js/home.js"></script>
 </head>
-<body class="home-body">
+<body>
 
-  <!-- ========== BACKGROUND LAYERS ========== -->
-  <div class="home-sky"></div>
-  <div class="home-horizon"></div>
-  <div class="home-stage"></div>
+<!-- SETTINGS ICON (bottom left, as you asked) -->
+<button id="settingsBtn" class="settings-btn">⚙️</button>
 
-  <!-- ========== LOGO ZONE ========== -->
-  <div class="home-logo-zone">
-    <img 
-      src="/assets/images/saybon-logo.png"
-      alt="SayBon Logo"
-      class="home-logo"
-    />
-    <p class="home-tagline">Easy. Fun. French.</p>
-  </div>
+<div class="home-container">
 
-  <!-- ========== TEACHER HERO ========== -->
-  <div class="teacher-stage">
-    <div class="teacher-spotlight"></div>
-
-    <img 
-      src="/assets/images/teacher.png"
-      alt="SayBon Teacher"
-      class="teacher-avatar"
-      id="teacherTrigger"
-    />
-
-    <p class="tap-text">Tap to Begin</p>
-  </div>
-
-  <!-- ========== ACTION BUTTONS ========== -->
-  <div class="home-actions">
-    <button class="glass-btn primary" id="getStartedBtn">
-      Get Started
-    </button>
-
-    <button class="glass-btn secondary" id="loginBtn">
-      Log In
-    </button>
-  </div>
-
-  <!-- ========== SETTINGS (ADMIN ENTRY) ========== -->
-  <button class="settings-float" id="settingsBtn">
-    ⚙️
-  </button>
-
-  <!-- ========== CINEMATIC OVERLAY (HIDDEN BY DEFAULT) ========== -->
-  <div class="cinematic-overlay" id="cinematicOverlay">
-    <div class="cinematic-pill">
-      <span>Bienvenue à SayBon ✨</span>
+  <!-- LEFT: WHITE BRAND SIDE -->
+  <div class="brand-side">
+    <div class="logo-wrap">
+      <img src="/assets/images/logo.png" alt="SayBon Logo" class="logo" />
+      <p class="tagline">Easy. Fun. French.</p>
     </div>
   </div>
 
+  <!-- RIGHT: EXPERIENCE SIDE -->
+  <div class="experience-side">
+
+    <div class="teacher-wrap">
+      <div id="teacherCircle" class="teacher-circle">
+        <img src="/assets/images/teacher.png" alt="Teacher" />
+      </div>
+      <p class="tap-hint">Tap to Begin ✨</p>
+    </div>
+
+    <div class="cta-stack">
+      <button id="startBtn" class="pill primary">Get Started</button>
+      <button id="loginBtn" class="pill outline">Log In</button>
+    </div>
+
+  </div>
+</div>
+
+<!-- CINEMATIC INTERVENTION OVERLAY -->
+<div id="offerOverlay" class="overlay hidden">
+
+  <audio id="introAudio" src="/assets/sounds/intro-v2.mp3"></audio>
+
+  <div class="overlay-content">
+
+    <h2 class="overlay-title">What we offer</h2>
+
+    <div class="pills">
+      <div class="pill-card">Speak French from your very first lesson</div>
+      <div class="pill-card">Clear, fun CEFR-based learning</div>
+      <div class="pill-card">Original music to help French stick</div>
+      <div class="pill-card">Tried & trusted DELF preparation</div>
+    </div>
+
+    <div class="overlay-actions">
+      <button id="backHomeBtn" class="glass-btn back">Back to Home</button>
+      <button id="revealBtn" class="glass-btn reveal">Reveal</button>
+    </div>
+
+  </div>
+</div>
+
+<script src="/js/home.js"></script>
 </body>
 </html>
-
-
