--- a/public/index.html
+++ b/public/index.html
@@ -1,68 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SayBon — Easy. Fun. French.</title>
-  <link rel="stylesheet" href="/css/home.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SayBon — Home</title>
+<link rel="stylesheet" href="/css/home.css">
 </head>
 <body>
 
-<!-- SETTINGS ICON (bottom left, as you asked) -->
+<!-- SETTINGS ICON (bottom left) -->
 <button id="settingsBtn" class="settings-btn">⚙️</button>
 
 <div class="home-container">
 
-  <!-- LEFT: WHITE BRAND SIDE -->
-  <div class="brand-side">
-    <div class="logo-wrap">
-      <img src="/assets/images/logo.png" alt="SayBon Logo" class="logo" />
-      <p class="tagline">Easy. Fun. French.</p>
-    </div>
-  </div>
-
-  <!-- RIGHT: EXPERIENCE SIDE -->
-  <div class="experience-side">
-
-    <div class="teacher-wrap">
-      <div id="teacherCircle" class="teacher-circle">
-        <img src="/assets/images/teacher.png" alt="Teacher" />
+  <!-- 3D ROTATING LOGO -->
+  <div class="logo-3d-wrapper">
+    <div class="logo-3d">
+      <div class="logo-face front">
+        <img src="/assets/images/logo.png" alt="SayBon Logo">
       </div>
-      <p class="tap-hint">Tap to Begin ✨</p>
+      <div class="logo-face back">
+        <img src="/assets/images/logo.png" alt="SayBon Logo">
+      </div>
     </div>
-
-    <div class="cta-stack">
-      <button id="startBtn" class="pill primary">Get Started</button>
-      <button id="loginBtn" class="pill outline">Log In</button>
-    </div>
-
   </div>
+
+  <!-- TEACHER RING STAGE -->
+  <div class="teacher-ring-container">
+    <div class="outer-ring"></div>
+    <div class="inner-ring"></div>
+
+    <div class="glass-dome">
+      <img id="teacherImg" src="/assets/images/teacher.png" alt="Teacher">
+    </div>
+
+    <p class="tap-hint">Tap to Begin ✨</p>
+  </div>
+
+  <!-- BOTTOM ACTIONS -->
+  <div class="action-bar">
+    <button class="btn primary">Get Started</button>
+    <button class="btn secondary">Log In</button>
+  </div>
+
 </div>
 
-<!-- CINEMATIC INTERVENTION OVERLAY -->
-<div id="offerOverlay" class="overlay hidden">
+<!-- AUDIO FOR CINEMATIC OVERLAY -->
+<audio id="introAudio" src="/assets/sounds/intro-v2.mp3"></audio>
 
-  <audio id="introAudio" src="/assets/sounds/intro-v2.mp3"></audio>
+<script>
+const teacher = document.getElementById("teacherImg");
+const audio = document.getElementById("introAudio");
 
-  <div class="overlay-content">
+teacher.addEventListener("click", () => {
+  audio.currentTime = 0;
+  audio.play();
+  document.body.classList.add("cinematic-active");
+});
+</script>
 
-    <h2 class="overlay-title">What we offer</h2>
-
-    <div class="pills">
-      <div class="pill-card">Speak French from your very first lesson</div>
-      <div class="pill-card">Clear, fun CEFR-based learning</div>
-      <div class="pill-card">Original music to help French stick</div>
-      <div class="pill-card">Tried & trusted DELF preparation</div>
-    </div>
-
-    <div class="overlay-actions">
-      <button id="backHomeBtn" class="glass-btn back">Back to Home</button>
-      <button id="revealBtn" class="glass-btn reveal">Reveal</button>
-    </div>
-
-  </div>
-</div>
-
-<script src="/js/home.js"></script>
 </body>
 </html>
