Redesign homepage with cinematic stage, teacher interaction, and wired navigation

--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,17 @@
 
 <div class="split-container">
 
-<!-- LEFT SIDE — WHITE -->
+<!-- LEFT SIDE — WHITE (TEACHER SIDE) -->
 <div class="side white-side">
 
   <div class="teacher-wrapper">
-    <div class="mint-gold-ring">
-      <div class="ring-inner">
-        <img src="assets/images/teacher.png" id="teacher" alt="Teacher">
-      </div>
-    </div>
+    <img src="assets/images/teacher.png" id="teacher" alt="Teacher">
     <p class="tap-text">Tap ✨</p>
   </div>
 
 </div>
 
-<!-- RIGHT SIDE — GREEN / TEAL -->
+<!-- RIGHT SIDE — GREEN / TEAL (LOGO SIDE) -->
 <div class="side green-side">
 
   <div class="logo-3d-container">
@@ -48,15 +44,14 @@
 
 </div>
 
-<!-- SETTINGS ICON -->
+<!-- SETTINGS ICON (BOTTOM RIGHT OF GREEN SIDE) -->
 <div class="settings-btn">
   ⚙️
 </div>
 
-<!-- CINEMATIC OVERLAY -->
-<div id="cinematicOverlay">
-  <audio id="introAudio" src="assets/sounds/intro-v2.mp3"></audio>
-</div>
+<!-- CINEMATIC OVERLAY (YOUR EXISTING EXPERIENCE) -->
+<div id="cinematicOverlay"></div>
+<audio id="introAudio" src="assets/sounds/intro-v2.mp3"></audio>
 
 <script src="js/home.js"></script>
 </body>
