--- a/public/index.html
+++ b/public/index.html
@@ -3,58 +3,70 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SayBon — Easy. Fun. French.</title>
-  <link rel="stylesheet" href="/css/global.css">
-  <link rel="stylesheet" href="/css/home.css">
+  <title>SayBon — Easy Fun French</title>
+
+  <link rel="stylesheet" href="/css/global.css" />
+  <link rel="stylesheet" href="/css/home.css" />
 </head>
 <body>
 
-<div class="home-container">
+  <div id="home-split">
 
-  <!-- WHITE SIDE -->
-  <div class="home-left">
-    <img 
-      src="/assets/images/logo.png"
-      class="saybon-logo"
-      alt="SayBon Logo"
-    />
+    <!-- LEFT SIDE — WHITE (TEACHER ONLY) -->
+    <div class="home-left">
+      <div class="teacher-container" id="teacher-trigger">
+        <img 
+          src="/assets/images/teacher.png" 
+          alt="SayBon Teacher"
+          class="teacher-hero"
+        />
+        <div class="teacher-ring"></div>
+      </div>
+    </div>
+
+    <!-- RIGHT SIDE — GREEN (LOGO + BUTTONS) -->
+    <div class="home-right">
+
+      <!-- 3D LOGO (STATIC, NO ROTATION, NO BACKGROUND) -->
+      <div class="logo-container">
+        <video 
+          class="saybon-3d-logo"
+          src="/assets/images/saybon_logo_spin.mp4"
+          autoplay
+          loop
+          muted
+          playsinline
+        ></video>
+      </div>
+
+      <!-- GLASSY BUTTON STACK -->
+      <div class="cta-stack">
+        <button class="glass-btn primary" id="get-started">
+          Get Started
+        </button>
+
+        <button class="glass-btn secondary" id="login">
+          Log In
+        </button>
+      </div>
+
+      <!-- SETTINGS ICON (ADMIN ENTRY) -->
+      <div class="settings-icon">
+        ⚙️
+      </div>
+
+    </div>
   </div>
 
-  <!-- GREEN SIDE -->
-  <div class="home-right">
+  <!-- CINEMATIC OVERLAY WHEN TEACHER IS TAPPED -->
+  <div id="teacher-overlay">
+    <audio id="intro-audio" src="/assets/sounds/intro-v2.mp3"></audio>
 
-    <!-- 3D LOGO (NO WHITE CIRCLE) -->
-    <div class="logo-3d-container">
-      <img 
-        src="/assets/images/logo.png"
-        class="logo-3d"
-        alt="SayBon 3D Logo"
-      />
+    <div class="overlay-content">
+      <span class="close-overlay">✕</span>
+      <h2>Why Learn French?</h2>
     </div>
-
-    <!-- BUTTON STACK -->
-    <div class="home-buttons">
-      <button class="glass-btn primary" id="getStartedBtn">
-        Get Started
-      </button>
-      <button class="glass-btn secondary" id="loginBtn">
-        Log In
-      </button>
-    </div>
-
-    <!-- TEACHER (BIGGER + NO RING) -->
-    <div class="teacher-container">
-      <img 
-        src="/assets/images/teacher.png"
-        class="teacher-hero"
-        alt="SayBon Teacher"
-      />
-      <p class="tap-text">Tap ✨</p>
-    </div>
-
   </div>
-
-</div>
 
 <script src="/js/home.js"></script>
 </body>
