Redesign homepage with cinematic stage, teacher interaction, and wired navigation

--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,17 @@
 
   <div id="home-split">
 
-    <!-- LEFT SIDE — WHITE (TEACHER ONLY) -->
+    <!-- LEFT SIDE — WHITE (TEACHER ONLY, NO RING) -->
     <div class="home-left">
-      <div class="teacher-container" id="teacher-trigger">
-        <img 
-          src="/assets/images/teacher.png" 
-          alt="SayBon Teacher"
-          class="teacher-hero"
-        />
-        <div class="teacher-ring"></div>
-      </div>
+
+      <!-- JUST THE TEACHER IMAGE — NOTHING ELSE -->
+      <img 
+        src="/assets/images/teacher.png" 
+        alt="SayBon Teacher"
+        class="teacher-hero"
+        id="teacher-trigger"
+      />
+
     </div>
 
     <!-- RIGHT SIDE — GREEN (LOGO + BUTTONS) -->
